--- a/index.html
+++ b/index.html
@@ -1,231 +1,139 @@
+<!-- Bu HTML dosyasına yapıştır -->
 <!DOCTYPE html>
 <html lang="tr">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
-  <title>Kalp Toplama Oyunu</title>
+  <title>Kalp Toplama (Yukarı Çık)</title>
   <style>
     body, canvas {
       margin: 0; padding: 0;
       overflow: hidden;
       background-color: #87CEEB;
-      display: block;
-      touch-action: none; 
-      width: 100%; height: 100%;
+      width: 100vw; height: 100vh;
+      touch-action: none;
     }
-    canvas {
-      display: block;
-    }
-    #leftButton, #rightButton, #jumpButton {
+    #leftButton, #rightButton {
       position: absolute;
       bottom: 20px;
-      width: 60px; height: 60px;
-      text-align: center;
-      line-height: 60px;
-      background-color: rgba(0, 0, 0, 0.5);
+      padding: 20px;
+      background-color: rgba(0,0,0,0.5);
       color: white;
       font-size: 28px;
       border-radius: 50%;
       cursor: pointer;
-      user-select: none;
     }
     #leftButton { left: 20px; }
     #rightButton { right: 20px; }
-    #jumpButton { bottom: 100px; left: 50%; transform: translateX(-50%); }
   </style>
 </head>
 <body>
-  <img id="face1" src="https://i.hizliresim.com/r6bm8a9.png" style="display: none;">
-  <img id="face2" src="https://i.hizliresim.com/37shbzf.png" style="display: none;">
-  
-  <canvas id="gameCanvas"></canvas>
-  <div id="leftButton">←</div>
-  <div id="rightButton">→</div>
-  <div id="jumpButton">↑</div>
+<canvas id="gameCanvas"></canvas>
+<div id="leftButton">←</div>
+<div id="rightButton">→</div>
 
-  <script>
-    const canvas = document.getElementById("gameCanvas"), ctx = canvas.getContext("2d");
-    let score = 0, level = 1, lives = 3, doubleJumpAvailable = true, gameOver = false;
+<script>
+const canvas = document.getElementById("gameCanvas");
+const ctx = canvas.getContext("2d");
 
-    const character1 = { x: 200, y: canvas.height - 200, width: 40, height: 40, velX: 0, velY: 0, speed: 5, jumping: false, grounded: false };
-    const character2 = { x: character1.x + 40, y: character1.y, width: 40, height: 40 };
-    const gravity = 0.5, jumpStrength = 14;
-    let platforms = [], hearts = [], obstacles = [];
+let score = 0, timeLeft = 60;
+canvas.width = window.innerWidth;
+canvas.height = window.innerHeight;
 
-    function resizeCanvas() {
-      canvas.width = window.innerWidth;
-      canvas.height = window.innerHeight;
+const character = { x: canvas.width/2 - 20, y: canvas.height - 100, width: 40, height: 40, velX: 0, velY: -2, speed: 5 };
+const hearts = [];
+const platforms = [];
+
+for (let i = 0; i < 10; i++) {
+  platforms.push({ x: Math.random() * canvas.width, y: i * 150, width: 100, height: 10 });
+  hearts.push({ x: Math.random() * canvas.width, y: i * 150 - 50, collected: false });
+}
+
+function update() {
+  character.y += character.velY;
+  character.x += character.velX;
+
+  // Platformlar ve kalpler aşağı kayar
+  platforms.forEach(p => p.y += 2);
+  hearts.forEach(h => h.y += 2);
+
+  // Ekrandan çıkanlar yenilenir
+  platforms.forEach((p, i) => {
+    if (p.y > canvas.height) {
+      p.y = -10;
+      p.x = Math.random() * canvas.width;
+      hearts[i] = { x: p.x + 30, y: p.y - 40, collected: false };
     }
-    window.addEventListener("resize", resizeCanvas);
-    resizeCanvas();
+  });
 
-    function createLevel() {
-      const baseY = canvas.height - 100;
-      platforms = [];
-      hearts = [];
-      obstacles = [];
-      
-      const platformData = [
-        { x: 0, y: baseY, width: canvas.width, height: 100 },
-        { x: 200, y: baseY - 100, width: 150, height: 20 },
-        { x: 400, y: baseY - 180, width: 150, height: 20 },
-        { x: 650, y: baseY - 250, width: 150, height: 20 },
-        { x: 900, y: baseY - 180, width: 150, height: 20 },
-        { x: 1150, y: baseY - 100, width: 150, height: 20 }
-      ];
-
-      const heartData = [
-        { x: 240, y: baseY - 140, collected: false, type: 'normal' },
-        { x: 460, y: baseY - 220, collected: false, type: 'strong' },
-        { x: 720, y: baseY - 290, collected: false, type: 'normal' },
-        { x: 980, y: baseY - 220, collected: false, type: 'normal' },
-        { x: 1240, y: baseY - 140, collected: false, type: 'strong' }
-      ];
-
-      platforms.push(...platformData);
-      hearts.push(...heartData);
-
-      for (let i = 0; i < 6; i++) {
-        obstacles.push({ x: Math.random() * (canvas.width - 30), y: Math.random() * (canvas.height - 200), width: 30, height: 30 });
-      }
-
-      // Reset karakter
-      character1.x = 200;
-      character1.y = canvas.height - 200;
-      character1.velX = 0;
-      character1.velY = 0;
+  // Kalp toplama
+  hearts.forEach(h => {
+    if (!h.collected && character.x < h.x + 20 && character.x + character.width > h.x &&
+        character.y < h.y + 20 && character.y + character.height > h.y) {
+      h.collected = true;
+      score++;
     }
+  });
 
-    createLevel();
+  // Duvar çarpması
+  if (character.x < 0) character.x = 0;
+  if (character.x + character.width > canvas.width) character.x = canvas.width - character.width;
 
-    const keys = {};
-    window.addEventListener("keydown", e => keys[e.key] = true);
-    window.addEventListener("keyup", e => keys[e.key] = false);
+  // Aşağı düşerse oyun biter
+  if (character.y > canvas.height) {
+    alert("Oyun Bitti! Skor: " + score);
+    location.reload();
+  }
+}
 
-    let touchStart = { x: 0, y: 0 }, touchEnd = { x: 0, y: 0 };
-    canvas.addEventListener("touchstart", e => { touchStart = { x: e.touches[0].clientX, y: e.touches[0].clientY }; });
-    canvas.addEventListener("touchmove", e => { touchEnd = { x: e.touches[0].clientX, y: e.touches[0].clientY }; });
-    canvas.addEventListener("touchend", () => {
-      if (touchEnd.y - touchStart.y > 30 && (character1.grounded || doubleJumpAvailable)) {
-        character1.velY = -jumpStrength;
-        character1.grounded = false;
-        character1.jumping = true;
-        doubleJumpAvailable = character1.grounded ? true : false;
-      }
-    });
+function draw() {
+  ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-    document.getElementById("leftButton").addEventListener("touchstart", () => character1.velX = -character1.speed);
-    document.getElementById("rightButton").addEventListener("touchstart", () => character1.velX = character1.speed);
-    document.getElementById("jumpButton").addEventListener("touchstart", () => {
-      if (character1.grounded || doubleJumpAvailable) {
-        character1.velY = -jumpStrength;
-        character1.grounded = false;
-        character1.jumping = true;
-        doubleJumpAvailable = character1.grounded ? true : false;
-      }
-    });
+  // Karakter
+  ctx.fillStyle = "orange";
+  ctx.fillRect(character.x, character.y, character.width, character.height);
 
-    document.getElementById("leftButton").addEventListener("touchend", () => character1.velX = 0);
-    document.getElementById("rightButton").addEventListener("touchend", () => character1.velX = 0);
+  // Platformlar
+  ctx.fillStyle = "green";
+  platforms.forEach(p => ctx.fillRect(p.x, p.y, p.width, p.height));
 
-    function updateCharacters() {
-      if (gameOver) return;
-
-      character1.velY += gravity;
-      if (keys["a"] || keys["ArrowLeft"]) character1.velX -= 0.5;
-      if (keys["d"] || keys["ArrowRight"]) character1.velX += 0.5;
-      character1.velX *= 0.8;
-      character1.x += character1.velX; 
-      character1.y += character1.velY;
-      character1.grounded = false;
-
-      platforms.forEach(p => {
-        if (character1.x + character1.width > p.x && character1.x < p.x + p.width &&
-            character1.y + character1.height <= p.y && character1.y + character1.height + character1.velY >= p.y) {
-          character1.y = p.y - character1.height;
-          character1.velY = 0;
-          character1.grounded = true;
-        }
-      });
-
-      // Kalp toplama
-      hearts.forEach(h => {
-        if (!h.collected &&
-            character1.x < h.x + 20 &&
-            character1.x + character1.width > h.x &&
-            character1.y < h.y + 25 &&
-            character1.y + character1.height > h.y) {
-          h.collected = true;
-          score += h.type === 'strong' ? 2 : 1;
-        }
-      });
-
-      // Engel çarpışması
-      obstacles.forEach(o => {
-        if (character1.x < o.x + o.width &&
-            character1.x + character1.width > o.x &&
-            character1.y < o.y + o.height &&
-            character1.y + character1.height > o.y) {
-          lives--;
-          character1.x = 200;
-          character1.y = canvas.height - 200;
-          character1.velY = 0;
-          if (lives <= 0) {
-            gameOver = true;
-            setTimeout(() => {
-              alert("Oyun Bitti! Skor: " + score);
-              score = 0;
-              lives = 3;
-              gameOver = false;
-              createLevel();
-            }, 100);
-          }
-        }
-      });
-
-      if (character1.x < 0) character1.x = 0;
-      if (character1.x + character1.width > canvas.width) character1.x = canvas.width - character1.width;
-      if (character1.y + character1.height > canvas.height) {
-        character1.y = canvas.height - character1.height;
-        character1.grounded = true;
-        character1.velY = 0;
-      }
-
-      character2.x = character1.x + character1.width;
-      character2.y = character1.y;
-    }
-
-    function drawHeart(x, y, type) {
-      ctx.fillStyle = type === 'strong' ? "purple" : "red";
+  // Kalpler
+  hearts.forEach(h => {
+    if (!h.collected) {
+      ctx.fillStyle = "red";
       ctx.beginPath();
-      ctx.moveTo(x, y);
-      ctx.bezierCurveTo(x, y - 10, x - 10, y - 10, x - 10, y + 5);
-      ctx.bezierCurveTo(x - 10, y + 15, x, y + 20, x, y + 25);
-      ctx.bezierCurveTo(x, y + 20, x + 10, y + 15, x + 10, y + 5);
-      ctx.bezierCurveTo(x + 10, y - 10, x, y - 10, x, y);
+      ctx.arc(h.x, h.y, 10, 0, Math.PI * 2);
       ctx.fill();
     }
+  });
 
-    function draw() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-      platforms.forEach(p => { ctx.fillStyle = "#654321"; ctx.fillRect(p.x, p.y, p.width, p.height); });
-      hearts.forEach(h => { if (!h.collected) drawHeart(h.x, h.y, h.type); });
-      obstacles.forEach(o => { ctx.fillStyle = "black"; ctx.fillRect(o.x, o.y, o.width, o.height); });
-      ctx.drawImage(face1, character1.x, character1.y - 10, character1.width, character1.height);
-      ctx.drawImage(face2, character2.x, character2.y - 10, character2.width, character2.height);
-      ctx.fillStyle = "black";
-      ctx.font = "24px Arial";
-      ctx.fillText(`Skor: ${score}`, 30, 30);
-      ctx.fillText(`Canlar: ${lives}`, 30, 60);
-    }
+  // Skor ve zaman
+  ctx.fillStyle = "black";
+  ctx.font = "20px Arial";
+  ctx.fillText(`Skor: ${score}`, 20, 30);
+  ctx.fillText(`Süre: ${timeLeft}`, 20, 60);
+}
 
-    function gameLoop() {
-      updateCharacters();
-      draw();
-      requestAnimationFrame(gameLoop);
-    }
-    gameLoop();
-  </script>
+function gameLoop() {
+  update();
+  draw();
+  requestAnimationFrame(gameLoop);
+}
+gameLoop();
+
+setInterval(() => {
+  timeLeft--;
+  if (timeLeft <= 0) {
+    alert("Süre doldu! Skor: " + score);
+    location.reload();
+  }
+}, 1000);
+
+// Mobil kontrol
+document.getElementById("leftButton").addEventListener("touchstart", () => character.velX = -character.speed);
+document.getElementById("rightButton").addEventListener("touchstart", () => character.velX = character.speed);
+document.getElementById("leftButton").addEventListener("touchend", () => character.velX = 0);
+document.getElementById("rightButton").addEventListener("touchend", () => character.velX = 0);
+</script>
 </body>
 </html>
