--- a/index.html
+++ b/index.html
@@ -1,33 +1,6 @@
-<!DOCTYPE html>
-<html lang="tr">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Kalp Toplama Yukarı</title>
-  <style>
-    body, canvas {
-      margin: 0; padding: 0;
-      overflow: hidden;
-      background-color: #87CEEB;
-      width: 100vw; height: 100vh;
-      touch-action: none;
-    }
-    #leftButton, #rightButton {
-      position: absolute;
-      bottom: 20px;
-      padding: 20px;
-      background-color: rgba(0,0,0,0.5);
-      color: white;
-      font-size: 28px;
-      border-radius: 50%;
-      cursor: pointer;
-    }
-    #leftButton { left: 20px; }
-    #rightButton { right: 20px; }
-  </style>
-</head>
-<body>
-<!-- Karakter görselleri -->
+<!-- ... HEAD ve BODY başı aynı kalıyor ... -->
+
+<!-- Görseller -->
 <img id="face1" src="https://i.hizliresim.com/r6bm8a9.png" style="display: none;">
 <img id="face2" src="https://i.hizliresim.com/37shbzf.png" style="display: none;">
 
@@ -39,11 +12,11 @@
 const canvas = document.getElementById("gameCanvas");
 const ctx = canvas.getContext("2d");
 
-let score = 0, timeLeft = 60, scrollSpeed = 2;
 canvas.width = window.innerWidth;
 canvas.height = window.innerHeight;
 
-// Karakter sabit ortada, yüzleri eklendi
+let score = 0, timeLeft = 60, scrollSpeed = 2;
+
 const character = {
   x: canvas.width / 2 - 20,
   y: canvas.height / 2,
@@ -53,21 +26,22 @@ const character = {
   speed: 5
 };
 
-const face1 = document.getElementById("face1");
-const face2 = document.getElementById("face2");
+const face1 = new Image();
+face1.src = "https://i.hizliresim.com/r6bm8a9.png";
+const face2 = new Image();
+face2.src = "https://i.hizliresim.com/37shbzf.png";
 
-const hearts = [];
-const platforms = [];
+const platforms = [], hearts = [];
 
+// Platform ve kalp oluştur
 for (let i = 0; i < 12; i++) {
-  let platformY = canvas.height - i * 150;
+  const platformY = canvas.height - i * 150;
   platforms.push({
     x: Math.random() * (canvas.width - 100),
     y: platformY,
     width: 100,
     height: 10
   });
-
   hearts.push({
     x: Math.random() * (canvas.width - 30),
     y: platformY - 40,
@@ -76,11 +50,9 @@ for (let i = 0; i < 12; i++) {
 }
 
 function update() {
-  // Platformlar ve kalpler aşağı kayıyor
   platforms.forEach(p => p.y += scrollSpeed);
   hearts.forEach(h => h.y += scrollSpeed);
 
-  // Yukarıdan tekrar gelenler
   platforms.forEach((p, i) => {
     if (p.y > canvas.height) {
       p.y = -10;
@@ -93,13 +65,10 @@ function update() {
     }
   });
 
-  // Karakter hareketi
   character.x += character.velX;
-
   if (character.x < 0) character.x = 0;
   if (character.x + character.width > canvas.width) character.x = canvas.width - character.width;
 
-  // Kalp toplama
   hearts.forEach(h => {
     if (!h.collected &&
         character.x < h.x + 20 &&
@@ -115,11 +84,9 @@ function update() {
 function draw() {
   ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-  // Platformlar
   ctx.fillStyle = "green";
   platforms.forEach(p => ctx.fillRect(p.x, p.y, p.width, p.height));
 
-  // Kalpler
   hearts.forEach(h => {
     if (!h.collected) {
       ctx.fillStyle = "red";
@@ -129,11 +96,10 @@ function draw() {
     }
   });
 
-  // Karakter görselleri
+  // Karakterin görsellerini çiz
   ctx.drawImage(face1, character.x, character.y - 5, character.width, character.height);
   ctx.drawImage(face2, character.x + character.width, character.y - 5, character.width, character.height);
 
-  // Skor ve zaman
   ctx.fillStyle = "black";
   ctx.font = "20px Arial";
   ctx.fillText(`Skor: ${score}`, 20, 30);
@@ -145,9 +111,19 @@ function gameLoop() {
   draw();
   requestAnimationFrame(gameLoop);
 }
-gameLoop();
 
-// Sayaç
+// Tüm resimler yüklendiğinde oyunu başlat
+let imagesLoaded = 0;
+[face1, face2].forEach(img => {
+  img.onload = () => {
+    imagesLoaded++;
+    if (imagesLoaded === 2) {
+      gameLoop(); // Hepsi yüklendi, oyunu başlat
+    }
+  };
+});
+
+// Zaman sayacı
 setInterval(() => {
   timeLeft--;
   if (timeLeft <= 0) {
@@ -156,7 +132,7 @@ setInterval(() => {
   }
 }, 1000);
 
-// Dokunmatik
+// Mobil kontrol
 document.getElementById("leftButton").addEventListener("touchstart", () => character.velX = -character.speed);
 document.getElementById("rightButton").addEventListener("touchstart", () => character.velX = character.speed);
 document.getElementById("leftButton").addEventListener("touchend", () => character.velX = 0);
