--- a/index.html
+++ b/index.html
@@ -18,12 +18,10 @@
       width: 100%;
       height: 100%;
     }
-    /* Buton için stil */
-    #jumpButton {
+    /* Butonlar için stil */
+    .controlButton {
       position: absolute;
       bottom: 20px;
-      left: 50%;
-      transform: translateX(-50%);
       padding: 15px;
       background-color: rgba(0, 0, 0, 0.5);
       color: white;
@@ -31,11 +29,24 @@
       border-radius: 50%;
       cursor: pointer;
     }
+    #jumpButton {
+      left: 50%;
+      transform: translateX(-50%);
+    }
+    #leftButton {
+      left: 20px;
+    }
+    #rightButton {
+      right: 20px;
+    }
   </style>
 </head>
 <body>
   <canvas id="gameCanvas"></canvas>
-  <div id="jumpButton">↑</div>
+
+  <div id="jumpButton" class="controlButton">↑</div>
+  <div id="leftButton" class="controlButton">←</div>
+  <div id="rightButton" class="controlButton">→</div>
 
   <!-- Yüz resimleri -->
   <img id="face1" src="https://i.hizliresim.com/r6bm8a9.png" style="display: none;">
@@ -96,6 +107,17 @@
         character2.velY = -jumpStrength;
         character2.grounded = false;
       }
+    });
+
+    // Sol ve sağ hareket butonlarına tıklama
+    document.getElementById("leftButton").addEventListener("click", () => {
+      character1.velX = -character1.speed;
+      character2.velX = -character2.speed;
+    });
+
+    document.getElementById("rightButton").addEventListener("click", () => {
+      character1.velX = character1.speed;
+      character2.velX = character2.speed;
     });
 
     // Platform oluşturma
