--- a/index.html
+++ b/index.html
@@ -113,12 +113,32 @@
     let moveLeft = false;
     let moveRight = false;
 
-    document.getElementById("leftButton").addEventListener("click", () => {
-      moveLeft = true;
+    let leftButtonActive = false;
+    let rightButtonActive = false;
+
+    document.getElementById("leftButton").addEventListener("mousedown", () => {
+      if (!leftButtonActive) {
+        moveLeft = true;
+        leftButtonActive = true;
+      }
     });
 
-    document.getElementById("rightButton").addEventListener("click", () => {
-      moveRight = true;
+    document.getElementById("rightButton").addEventListener("mousedown", () => {
+      if (!rightButtonActive) {
+        moveRight = true;
+        rightButtonActive = true;
+      }
+    });
+
+    // Butonları bıraktığında hareketsizlik
+    document.getElementById("leftButton").addEventListener("mouseup", () => {
+      moveLeft = false;
+      leftButtonActive = false;
+    });
+
+    document.getElementById("rightButton").addEventListener("mouseup", () => {
+      moveRight = false;
+      rightButtonActive = false;
     });
 
     // Platform oluşturma
@@ -303,11 +323,9 @@
       if (moveLeft) {
         character1.velX = -character1.speed;
         character2.velX = -character2.speed;
-        moveLeft = false;
       } else if (moveRight) {
         character1.velX = character1.speed;
         character2.velX = character2.speed;
-        moveRight = false;
       } else {
         character1.velX = 0;
         character2.velX = 0;
