--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       height: 40,
       velX: 0,
       velY: 0,
-      speed: 5,
+      speed: 10, // Hız arttırıldı
       grounded: false
     };
 
@@ -81,7 +81,7 @@
       height: 40,
       velX: 0,
       velY: 0,
-      speed: 5,
+      speed: 10, // Hız arttırıldı
       grounded: false
     };
 
